Fix lint errors in index.html, ignore in tests

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
       Basic page styles.
     -->
     <style>
-      html, body {
+      html,
+      body {
         margin: 0;
         padding: 0;
       }
