--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -50,8 +50,7 @@
 
       <!-- Component ---------------------------------------------------------->
       <px-demo-component slot="px-demo-component" class="flex" style="width:100%;">
-        <px-vis-boxplot
-          test-prop="[[props.testProp.value]]">
+        <px-vis-boxplot>
         </px-vis-boxplot>
       </px-demo-component>
       <!-- END Component ------------------------------------------------------>
@@ -221,11 +220,7 @@
      * A reference for `this.props`. Read the documentation there.
      */
     demoProps: {
-      testProp: {
-        type: String,
-        defaultValue: 'Gandolf',
-        inputType: 'text'
-      }
+
     }
   });
 
